# compressed-embed

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: CompressedEmbed.cmake  compressed-embed-config.cmake  compressed-embed-config.cmake.in
src/: CMakeLists.txt
src/compressor/: CMakeLists.txt  Config.hpp  main.cpp
src/lib/: CMakeLists.txt
src/lib/FredEmmott/CompressedEmbed/: Backend.hpp  InputResource.hpp  StoredResource.hpp  StoredResources.hpp  Win32Backend.cpp  Win32Backend.hpp  config.hpp  config.hpp.in
